# license-compliance-checker

./: .gitignore  Dockerfile  QUICK_START.md  README.md  TESTING_GUIDE.md  auth.db  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  mkdocs.yml  pyproject.toml  test_fallback.py  test_fnmatch.py  test_full_chain.py  test_pypi.py  test_registry_direct.py  test_resolver.py  test_with_project_root.py  test_with_real_project.py
.github/actions/license-compliance/: README.md  action.yml
.github/workflows/: docs.yml  lcc-scan.yml  publish-pypi.yml  test-action.yml  test-pypi.yml
benchmarks/: README.md  __init__.py  __main__.py  accuracy_benchmark.py  ai_model_benchmark.py  run_benchmarks.py  speed_benchmark.py
benchmarks/corpus/: ai_models.json  manifest.json
dashboard/: middleware.ts  package-lock.json  package.json
dashboard/src/app/: layout.tsx
dashboard/src/app/(app)/ai-models/: page.tsx
dashboard/src/app/(app)/compliance/: page.tsx
dashboard/src/app/(app)/datasets/: page.tsx
dashboard/src/app/(app)/scans/[id]/: page.tsx
dashboard/src/app/(app)/violations/: page.tsx
dashboard/src/app/(demo)/account/: page.tsx
dashboard/src/app/(demo)/ai-models/: page.tsx
dashboard/src/app/(demo)/analytics/: page.tsx
dashboard/src/app/(demo)/dashboard/: page.tsx
dashboard/src/app/(demo)/datasets/: page.tsx
dashboard/src/app/(demo)/policies/: page.tsx
dashboard/src/app/(demo)/policies/[name]/: page.tsx
dashboard/src/app/(demo)/sbom/: page.tsx
dashboard/src/app/(demo)/scans/: page.tsx
dashboard/src/app/(demo)/scans/[id]/: page.tsx
dashboard/src/app/(demo)/settings/: page.tsx
dashboard/src/app/(demo)/violations/: page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/components/admin-panel/: footer.tsx  sidebar.tsx  user-nav.tsx
dashboard/src/contexts/: AuthContext.tsx
dashboard/src/lib/: api.ts  menu-list.ts
docs/: API_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  POLICY_GUIDE.md  TROUBLESHOOTING.md  USER_GUIDE.md  VIDEO_SCRIPT.md  implementation-plan.md  index.md  requirements.txt
docs/getting-started/: installation.md  quickstart.md
policy/templates/: eu_ai_act.yaml  nist_ai_rmf.yaml
src/lcc/: config.py  factory.py  models.py  scanner.py
src/lcc/ai/: __init__.py  dataset_card_parser.py  dataset_licenses.py  licenses.py  model_card_parser.py
src/lcc/api/: __init__.py  auth_routes.py  regulatory_routes.py  repository.py  sbom_routes.py  server.py
src/lcc/auth/: __init__.py  core.py  repository.py
src/lcc/cli/: main.py  sbom.py
src/lcc/data/: __init__.py
src/lcc/data/policies/: __init__.py  ai-ml-permissive.yml  ai-ml-research.yml  ai-ml-strict.yml  copyleft-friendly.yaml  eu-ai-act-compliance.yml  nist-ai-rmf.yml  permissive.yaml
src/lcc/database/: models.py
src/lcc/detection/: base.py  dotnet.py  go.py  gradle.py  hf_datasets.py  huggingface.py  java.py  javascript.py  license_file.py  python.py  ruby.py  rust.py
src/lcc/notifications/: __init__.py  core.py  email.py  slack.py  webhook.py
src/lcc/policy/: __init__.py  base.py  compatibility.py  compatibility_integration.py
src/lcc/regulatory/: __init__.py  constants.py  eu_ai_act.py  frameworks.py  reporter.py
src/lcc/reporting/: console_reporter.py  html_reporter.py  json_reporter.py  markdown_reporter.py
src/lcc/resolution/: fallback.py  filesystem.py  hf_hub_resolver.py  registries.py
src/lcc/sbom/: __init__.py  cyclonedx.py  regulatory_properties.py  signer.py  spdx.py  validator.py
src/lcc/worker/: tasks.py  worker.py
tests/ai/: test_ai_licenses.py  test_llm.py
tests/detection/: test_dotnet_detector.py  test_gguf_detection.py  test_hf_datasets_detector.py  test_hf_reference_detector.py  test_huggingface_detector.py  test_python_detector.py  test_ruby_detector.py
tests/integration/: test_scan_api.py  test_workflows.py
tests/performance/: PERFORMANCE_BASELINES.md  __init__.py  conftest.py  test_api_performance.py  test_database_performance.py  test_resolver_performance.py  test_scanner_performance.py
tests/regulatory/: test_dataset_risk_registry.py
tests/sbom/: __init__.py  test_cyclonedx.py
tests/worker/: test_tasks.py
